examples/smlfmt-1.2.0/test/fail/string-escape-1.sml
val _ = "\u00a4hello\100\u0"
